--- a/public/style.css
+++ b/public/style.css
@@ -19,3 +19,48 @@ form div {
   margin: 1em;
   display: inline-block;
 }
+
+
+/* -----------------FRONT PAGE Section -------------------*/
+.frontPageContainer{
+  background-image:  url('http://mgrdoc.com/wp-content/uploads/2015/03/%EB%8B%A4%EC%9D%B4%EC%96%B4%ED%8A%B8%ED%95%9C%EC%9D%98%EC%9B%90.jpg');
+  background-color: #cccccc;
+  /* background-repeat: no-repeat; */
+  height: 100vh;
+  background-size: 100% 100%;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.frontPageContainer h1{
+  color: white;
+  background-color: darkgoldenrod;
+  display: inline-block;
+  width: 480px;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  box-sizing: border-box;
+}
+
+.frontPageContainer h2{
+  color: white;
+  background-color: darkgoldenrod;
+  display: inline-block;
+  width: 540px;
+  text-align: center;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  box-sizing: border-box;
+}
+
+.frontPageContainer h4{
+  color: white;
+  background-color: darkgoldenrod;
+}
+  /* -----------------Flex -------------------*/
+  .flex-container-column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
