--- a/public/style.css
+++ b/public/style.css
@@ -20,13 +20,15 @@ form div {
   display: inline-block;
 }
 
+.svg-icon path {
+  fill: #c02446ad;
+}
+
 
 /* -----------------FRONT PAGE Section -------------------*/
 .frontPageContainer{
-  background-image:  url('http://mgrdoc.com/wp-content/uploads/2015/03/%EB%8B%A4%EC%9D%B4%EC%96%B4%ED%8A%B8%ED%95%9C%EC%9D%98%EC%9B%90.jpg');
-  background-color: #cccccc;
-  /* background-repeat: no-repeat; */
-  height: 100vh;
+  background-image:  url('http://cfile205.uf.daum.net/image/0309B35050BD441401F5EB');
+  height: 200vh;
   background-size: 100% 100%;
   justify-content: center;
   align-items: flex-start;
@@ -34,7 +36,6 @@ form div {
 
 .frontPageContainer h1{
   color: white;
-  background-color: darkgoldenrod;
   display: inline-block;
   width: 480px;
   text-align: center;
@@ -45,7 +46,6 @@ form div {
 
 .frontPageContainer h2{
   color: white;
-  background-color: darkgoldenrod;
   display: inline-block;
   width: 540px;
   text-align: center;
@@ -56,7 +56,10 @@ form div {
 
 .frontPageContainer h4{
   color: white;
-  background-color: darkgoldenrod;
+}
+  /* ----------------- Navbar -------------------*/
+.navbar {
+  background-color: black;
 }
   /* -----------------Flex -------------------*/
   .flex-container-column {
